# waymote

./: '  Cargo.toml  README.md  flake.nix
public/: index.html  index.js  style.css
src/: main.rs
