[package]
name = "waymote"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
applications = "0.3.1"
axum = { version = "0.8.6", features = ["ws"] }
enigo = { version = "0.6.1", features = ["wayland"] }
env_logger = "0.11.8"
execute = "0.2.13"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
